--- a/index.html
+++ b/index.html
@@ -371,16 +371,32 @@
       </section>
   </main>
 
-  <!-- <footer class="bg-dark mt-5 py-5">
-    <div class="row row-cols-1 row-cols-md-2">
-      <div class="col text-light d-flex g-10">
-        <p>Download Now</p><p>License</p>
+  <footer class="text-light bg-dark mt-5 py-5">
+    <div class="row row-cols-1 row-cols-md-2 mx-auto">
+      <div>
+        <div class="d-flex ms-5 gap-3 ">
+          <p>Download Now</p>
+          <P>Lichence</P>
+        </div>
+        <div class="d-flex ms-5 gap-3">
+          <p>About</p>
+          <p>Feature</p>
+          <p>Price</p>
+          <p>Contact Us</p>
+          <p>Help</p>
+          <p>Privacy Policy</p>
+        </div>
+        <div class="ms-5"> 
+          <small>Copyright © 2021. All Right Reserved</small>
+        </div>
       </div>
-      <div class="col">
-
+      <div>
+        <h5 class="mb-3">Get the App</h5>
+        <img class="apple-store" src="images/apple.png" alt=""> <br>
+        <img class="google-play-store pt-2" src="images/google.jpg" alt="">
       </div>
     </div>
-  </footer> -->
+  </footer>
 
 
 
